[package]
name = "ThisWeekInPS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
toml = "0.7.3"
serde_json = "1.0.94"
serde = { version = "1.0.156", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-appender = "0.2.2"
chrono = "0.4.24"
anyhow = "1.0.69"
lettre = "0.10"


